ttrs extended, backlog mind map added

--- a/_posts/2021-12-25-ttrs-app.md
+++ b/_posts/2021-12-25-ttrs-app.md
@@ -8,5 +8,5 @@ excerpt_separator: <!--more-->
 ---
 Tetris is a game with very few rules. But to implement these and the game scene you have to learn at least one thing that the pieces are called tetrominos.
 <!--more-->
-I did not know that and still keep replacing some i with an o here and there in that word.
+I did not know that and still keep replacing some i with an o here and there in that word. (and as it turns out Tetriminos is the official name since 2001, so I gues I was always right)
 The projects base idea was to try pyglet without external assets. Create a game with just lines and pixels, implement a minimalistic menu system on top of this and make it playable.
