tetris post corrected, updated

--- a/_posts/2021-12-25-ttrs-app.md
+++ b/_posts/2021-12-25-ttrs-app.md
@@ -54,7 +54,7 @@ class GUI:
 {% endhighlight %}
 
 
-Shapes class... data structure...
+Shapes class contains the description of tetrmominos. The `coords` and `color` are extensively used by basic movement, collision and drawing methods. The `bottom_left` and `top_right` was used in the now deprecated `rotate` method inside Shapes but not anywhere else. First I tought a kind of bounding box should be used for wall and floor collision detection but eventually checking every gox of a trtromino is just as easy and can be used in any other collision check also. One algo rule them all.
 {% highlight python %}
 class Shapes:
     def __init__(self) -> None:
@@ -65,35 +65,40 @@ class Shapes:
             }
 {% endhighlight %}
 
-shape movement, collision detection
-
+Collision detection happens in the `Map` class. Not the best place for this but not a big deal either so it stays.
 Shape rotation in Shapes class is based on vectors and rotation matrices.
 {% highlight python %}
-def rotate(self, shape, clockwise=True):
-    '''
-    Rotate right (by default) or left 90 degree the given shape.
-    rot matrix for 90degr: [(0,-1),(1,0)]
-    rot matrix for -90degr: [(0,1),(-1,0)]
-    cw: sin(90)=-1 cos(90)=0
-    cc: sin(90)=1 cos(90)=0
-    [cos]
-    '''
-    if shape in self.tetrominoes.keys():
-        shape_coords = self.tetrominoes[shape]['coords']
+    def rotate_player(self, clockwise=True):
+        '''
+        Rotate right (by default) or left 90 degree the given shape.
+        rot matrix for 90degr: [(0,-1),(1,0)]
+        rot matrix for -90degr: [(0,1),(-1,0)]
+        cw: sin(90)=-1 cos(90)=0
+        cc: sin(90)=1 cos(90)=0
+        '''
         new_shape_coords = []
-        for coord in shape_coords:
+        valid = True
+        for coord in self.player_shape['coords']:
             if clockwise:                    
                 new_shape_coords.append( (coord[1],-1*coord[0]) )
             else:
                 new_shape_coords.append( (-1*coord[1],coord[0]) )
-        self.tetrominoes[shape]['coords'] = new_shape_coords
-    min_coord = (100,100)
-    max_coord = (-100,-100)
-    for coord in self.tetrominoes[shape]['coords']:
-        if coord < min_coord: min_coord = coord
-        if max_coord < coord: max_coord = coord
-    self.tetrominoes[shape]['bottom_left'] = min_coord
-    self.tetrominoes[shape]['top_right'] = max_coord
+        for grid in new_shape_coords:
+            if not self.is_valid(self.player_pivot[0] + grid[0],self.player_pivot[1] + grid[1]):
+                valid = False
+        if valid:
+            for grid in self.player_shape['coords']:
+                x = self.player_pivot[0] + grid[0]
+                y = self.player_pivot[1] + grid[1]
+                self.color_grid(x,y,None)
+            self.player_shape['coords'] = new_shape_coords
+            color = self.player_shape['color']
+            for grid in self.player_shape['coords']:
+                x = self.player_pivot[0] + grid[0]
+                y = self.player_pivot[1] + grid[1]
+                self.color_grid(x,y,color)
+        return valid
 {% endhighlight %}
+
 {% highlight python %}
 {% endhighlight %}
