ttrs post updated

--- a/_posts/2021-12-25-ttrs-app.md
+++ b/_posts/2021-12-25-ttrs-app.md
@@ -53,7 +53,6 @@ class GUI:
             self.state.on_draw()
 {% endhighlight %}
 
-
 Shapes class contains the description of tetrmominos. The `coords` and `color` are extensively used by basic movement, collision and drawing methods. The `bottom_left` and `top_right` was used in the now deprecated `rotate` method inside Shapes but not anywhere else. First I tought a kind of bounding box should be used for wall and floor collision detection but eventually checking every gox of a trtromino is just as easy and can be used in any other collision check also. One algo rule them all.
 {% highlight python %}
 class Shapes:
@@ -65,33 +64,21 @@ class Shapes:
             }
 {% endhighlight %}
 
-Collision detection happens in the `Map` class. Not the best place for this but not a big deal either so it stays.
-Shape rotation in Shapes class is based on vectors and rotation matrices.
+Collision detection happens in the `Map` class. Not the best place for this but they got some dependency on each other so it stays. A few utility methods like `is_valid` (checks if grid is within map and it's unoccupied) `get_grid_color`, `color_grid` helps create the movement methods. One is `update_player_shape` which get x and y offsets as input and tries to move the shape to the new location. Checks validity and if all is well deletes the player shape on the map, updates the pivot point and draws it in the new place.
 {% highlight python %}
-    def rotate_player(self, clockwise=True):
-        '''
-        Rotate right (by default) or left 90 degree the given shape.
-        rot matrix for 90degr: [(0,-1),(1,0)]
-        rot matrix for -90degr: [(0,1),(-1,0)]
-        cw: sin(90)=-1 cos(90)=0
-        cc: sin(90)=1 cos(90)=0
-        '''
-        new_shape_coords = []
+def update_player_shape(self, offset_x, offset_y ):
         valid = True
-        for coord in self.player_shape['coords']:
-            if clockwise:                    
-                new_shape_coords.append( (coord[1],-1*coord[0]) )
-            else:
-                new_shape_coords.append( (-1*coord[1],coord[0]) )
-        for grid in new_shape_coords:
-            if not self.is_valid(self.player_pivot[0] + grid[0],self.player_pivot[1] + grid[1]):
+        for grid in self.player_shape['coords']:
+            x = self.player_pivot[0] + grid[0] + offset_x
+            y = self.player_pivot[1] + grid[1] + offset_y
+            if not self.is_valid(x,y):
                 valid = False
         if valid:
             for grid in self.player_shape['coords']:
                 x = self.player_pivot[0] + grid[0]
                 y = self.player_pivot[1] + grid[1]
                 self.color_grid(x,y,None)
-            self.player_shape['coords'] = new_shape_coords
+            self.player_pivot = (self.player_pivot[0] + offset_x, self.player_pivot[1] + offset_y)
             color = self.player_shape['color']
             for grid in self.player_shape['coords']:
                 x = self.player_pivot[0] + grid[0]
@@ -99,6 +86,31 @@ Shape rotation in Shapes class is based on vectors and rotation matrices.
                 self.color_grid(x,y,color)
         return valid
 {% endhighlight %}
+
+Shape rotation in Shapes class is based on vectors and rotation matrices. In 2D rotating one point can be done with a 2x2 matrix. This uses a sin function but because we always want to turn a shape by 90 degree plus or minus the calculations are much much simpler. Sinus 90 equals to -1 and sinus 90 to 1. So this means that the shapes coordinates should be multiplied by -1 or +1 and the actual rotations are became this:
+{% highlight python %}
+if clockwise:                    
+    new_shape_coords.append( (coord[1],-1*coord[0]) )
+else:
+    new_shape_coords.append( (-1*coord[1],coord[0]) )
+{% endhighlight %}
+Neat.
+
+By the way this shape rotate algorithm is very similar to the `update_player_shape` method in fact these two should be merged along with some clever attributes to distinguish if we want to rotate or just to move. Or separate the calculations to two new methods and check and re-drawing to an other. Or maybe a context manager setup where the calculations are inside and the checks and erase/drawing are outside. Worth a try sometime.
+
+Generating a new shape happens in `generate_new_shape`, wow. Python's random got a pretty good choice method for this which returns a random element from a list. Besides a random shape this method checks if the new shape's coordinate is unoccupied and if not first it translates 2 grid left, checks, if needed tries 2 grids right. If neither of them available it sets the full variable to True. Which means the game over. 
+{% highlight python %}
+rand_shape = random.choice(list(self.shapes.tetrominoes.keys()))
+player_shape = self.shapes.tetrominoes[rand_shape]
+...
+elif self.is_valid(x-2,y):
+    self.player_pivot = (x-2,y)
+elif self.is_valid(x+2,y):
+    self.player_pivot = (x+2,y)
+else:
+    self.full = True
+{% endhighlight %}
+
 
 {% highlight python %}
 {% endhighlight %}
