platformer and tetris posts update, new ttrs state diagram

--- a/_posts/2021-12-25-ttrs-app.md
+++ b/_posts/2021-12-25-ttrs-app.md
@@ -12,16 +12,17 @@ I did not know that and still kept replacing some 'i' with an 'o' here and there
 ![app image](https://github.com/PeterSzasz/ttrs/raw/main/screenshot.png){: .align-right}
 Anyway, the projects base idea was to try pyglet without external assets. Create a game with just lines and pixels, implement a minimalistic menu system on top of this and make it playable. For a while I was planning to create some simple sound effects too. Generating a few sinus based tones with different amplitude and/or frequency values is easy. Then you just have to experiment a little on how to combine them to some comforting bleeps and blops for your mini-game-project. This sound business remains to an other project for this I found some good underwater beeps and bloops.
 
+![state pattern image]({{ site.url }}/assets/StateClassDiagram_ttrs.png){: .align-right}
 The State pattern here is based on `GameState` class which contains only method declarations, basically an abstract class without any implementation. A `Menu`, `Running` and `Scores` classes inherit from this base class.
 Because of the simplicity of the project the state classes contains not just the graphic generations and the objects necessary to play tetris but the logic for the gui, sound effects and input handling.
 
-In a way the context for these states is the `GUI` class. It's got a set_state and get_state method and every major method calls the appropriate state version. What I mean is that GUI got an `on_key_press` method just like all the state classes and the `GameWindow` class (which inherits it from pyglet's on_key_press). So in the `GameWindow` class, after the state is set, an `on_key_press` method calls the `gui.on_key_press` method which looks like this:
+The context for these states is the `GUI` class. It's got all the necessary methods for input, drawing and update and every major method calls the appropriate state version of it. What I mean is that GUI got an `on_key_press` method just like all the state classes and the `GameWindow` class (which inherits it from pyglet's on_key_press). So in the `GameWindow` class, after the state is set, an `on_key_press` method calls the `gui.on_key_press` method which looks like this:
 {% highlight python %}
 def on_key_press(self, key, modifiers):
     if self.state:
         self.state.on_key_press(key, modifiers)
 {% endhighlight %}
-The control handed over to the active state. Same happens in the `on_update` and `on_draw` methods.
+The control handed over to the active state and it handles the input accordingly. Same happens in the `on_update` and `on_draw` methods.
 Worth mentioning that in the `on_draw` method just before the state related drawings happen the blitting of the background image. In pyglet if you want to draw something from pixel to pixel you have to blit images onto images. Because of this in `GUI`'s init I define a pixel and two grid sized boxes. In `draw_background` these boxes repaint the previous frame's background, basically erasing any previous modifications from state drawings.
 {% highlight python %}
 class GUI:
