ttrs post update

--- a/_posts/2021-12-25-ttrs-app.md
+++ b/_posts/2021-12-25-ttrs-app.md
@@ -8,8 +8,8 @@ excerpt_separator: <!--more-->
 ---
 Tetris is a game with very few rules. But to implement these and the game scene you have to learn at least one thing that the pieces are called tetrominos, sometimes.
 <!--more-->
-I did not know that and still kept replacing some 'i' with an 'o' here and there in that word and then correcting them. Then it turned out Tetriminos is the official name since 2001, so I guess I was always right. Maybe someone mixed those up in the Tetris Committee also, I imagine fights over this up until 2001 when a new era started.
 ![app image](https://github.com/PeterSzasz/ttrs/raw/main/screenshot.png){: .align-right}
+I did not know that and still kept replacing some 'i' with an 'o' here and there in that word and then correcting them. Then it turned out Tetriminos is the official name since 2001, so I guess I was always right. Maybe someone mixed those up in the Tetris Committee also, I imagine fights over this up until 2001 when they settled and a new era just started.
 Anyway, the projects base idea was to try pyglet without external assets. Create a game with just lines and pixels, implement a minimalistic menu system on top of this and make it playable. For a while I was planning to create some simple sound effects too. Generating a few sinus based tones with different amplitude and/or frequency values is easy. Then you just have to experiment a little on how to combine them to some comforting bleeps and blops for your mini-game-project. This sound business remains to an other project for this I found some good underwater beeps and bloops.
 
 ![state pattern image]({{ site.url }}/assets/StateClassDiagram_ttrs.png){: .align-right}
