graph app updated

--- a/_posts/2022-01-06-graph-app.md
+++ b/_posts/2022-01-06-graph-app.md
@@ -9,8 +9,8 @@ excerpt_separator: <!--more-->
 I wanted to do something with graphs. Generating algorithms seemed a good choice and after I found a very good article about map generation I started building an app. It is now capable of some Voronoi and a little Delaunay based generation.
 <!--more-->
 ![delaunay spanningtree](https://github.com/PeterSzasz/GraphApp/raw/master/delaunay_w_spanningtree.jpg){: .align-right}
-- gui
-- dots to lines to graphs
-- depth and breadth
-- voronoi, delaunay
-![voronoi from delaunay](https://github.com/PeterSzasz/GraphApp/raw/master/voronoi_from_delaunay.jpg){: .align-left}
+As a GUI centric app PyQT5 was a natural choice. Easy to build a button and widget toolbar on the side and update a central canvas for graphics. 
+There were some efforts creating a system where first you can create some dots on the white canvas based on a selected algorithm and then a second step would be to connect them by an other algorithm, creating a graph in the way. A major refactoring for the GUI is next if I want to realise this.
+A breadth first graph traversal was realised early and quickly developed with its help a spanning tree detecting and highlighting method too.
+A Delaunay class calculates a Delaunay triangulation with the help of Bowyer–Watson algorithm. And as a sideffect returns not just this but also a complementer Voronoi node set.
+![voronoi from delaunay](https://github.com/PeterSzasz/GraphApp/raw/master/voronoi_from_delaunay.jpg){: .center}
