justified post texts

--- a/_posts/2022-01-06-graph-app.md
+++ b/_posts/2022-01-06-graph-app.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 author: SzP
-title:  "TTRS app"
+title:  "Graph app"
 date:   2022-01-06 08:51:12 +0100
 categories: backlog apps graph
 excerpt_separator: <!--more-->
@@ -10,7 +10,11 @@ I wanted to do something with graphs. Generating algorithms seemed a good choice
 <!--more-->
 ![delaunay spanningtree](https://github.com/PeterSzasz/GraphApp/raw/master/delaunay_w_spanningtree.jpg){: .align-right}
 As a GUI centric app PyQT5 was a natural choice. Easy to build a button and widget toolbar on the side and update a central canvas for graphics. 
+{: .text-justify}
 There were some efforts creating a system where first you can create some dots on the white canvas based on a selected algorithm and then a second step would be to connect them by an other algorithm, creating a graph in the way. A major refactoring for the GUI is next if I want to realise this.
+{: .text-justify}
 A breadth first graph traversal was realised early and quickly developed with its help a spanning tree detecting and highlighting method too.
+{: .text-justify}
 A Delaunay class calculates a Delaunay triangulation with the help of Bowyer–Watson algorithm. And as a sideffect returns not just this but also a complementer Voronoi node set.
+{: .text-justify}
 ![voronoi from delaunay](https://github.com/PeterSzasz/GraphApp/raw/master/voronoi_from_delaunay.jpg){: .center}
