--- a/_posts/2021-12-25-ttrs-app.md
+++ b/_posts/2021-12-25-ttrs-app.md
@@ -10,20 +10,23 @@ Tetris is a game with very few rules. But to implement these and the game scene 
 <!--more-->
 ![app image](https://github.com/PeterSzasz/ttrs/raw/main/screenshot.png){: .align-right}
 I did not know that and still kept replacing some 'i' with an 'o' here and there in that word and then correcting them. Then it turned out Tetriminos is the official name since 2001, so I guess I was always right. Maybe someone mixed those up in the Tetris Committee also, I imagine fights over this up until 2001 when they settled and a new era just started.
+{: .text-justify}
 Anyway, the projects base idea was to try pyglet without external assets. Create a game with just lines and pixels, implement a minimalistic menu system on top of this and make it playable. For a while I was planning to create some simple sound effects too. Generating a few sinus based tones with different amplitude and/or frequency values is easy. Then you just have to experiment a little on how to combine them to some comforting bleeps and blops for your mini-game-project. This sound business remains to an other project for this I found some good underwater beeps and bloops.
+{: .text-justify}
 
-![state pattern image]({{ site.url }}/assets/StateClassDiagram_ttrs.png){: .align-right}
-The State pattern here is based on `GameState` class which contains only method declarations, basically an abstract class without any implementation. A `Menu`, `Running` and `Scores` classes inherit from this base class.
-Because of the simplicity of the project the state classes contains not just the graphic generations and the objects necessary to play tetris but the logic for the gui, sound effects and input handling.
+![state pattern image]({{ site.url }}/assets/StateClassDiagram_ttrs.png){: .align-left}
+The State pattern here is based on `GameState` class which contains only method declarations, basically an abstract class without any implementation. A `Menu`, `Running` and `Scores` classes inherit from this base class. Because of the simplicity of the project the state classes contains not just the graphic generations and the objects necessary to play tetris but the logic for the gui, sound effects and input handling.
+{: .text-justify}
 
 The context for these states is the `GUI` class. It's got all the necessary methods for input, drawing and update and every major method calls the appropriate state version of it. What I mean is that GUI got an `on_key_press` method just like all the state classes and the `GameWindow` class (which inherits it from pyglet's on_key_press). So in the `GameWindow` class, after the state is set, an `on_key_press` method calls the `gui.on_key_press` method which looks like this:
+{: .text-justify}
 {% highlight python %}
 def on_key_press(self, key, modifiers):
     if self.state:
         self.state.on_key_press(key, modifiers)
 {% endhighlight %}
-The control handed over to the active state and it handles the input accordingly. Same happens in the `on_update` and `on_draw` methods.
-Worth mentioning that in the `on_draw` method just before the state related drawings happen the blitting of the background image. In pyglet if you want to draw something from pixel to pixel you have to blit images onto images. Because of this in `GUI`'s init I define a pixel and two grid sized boxes. In `draw_background` these boxes repaint the previous frame's background, basically erasing any previous modifications from state drawings.
+The control handed over to the active state and it handles the input accordingly. Same happens in the `on_update` and `on_draw` methods. Worth mentioning that in the `on_draw` method just before the state related drawings happen the blitting of the background image. In pyglet if you want to draw something from pixel to pixel you have to blit images onto images. Because of this in `GUI`'s init I define a pixel and two grid sized boxes. In `draw_background` these boxes repaint the previous frame's background, basically erasing any previous modifications from state drawings.
+{: .text-justify}
 {% highlight python %}
 class GUI:
     def __init__(self, width, height) -> None:
@@ -55,6 +58,7 @@ class GUI:
 {% endhighlight %}
 
 Shapes class contains the description of tetrmominos. The `coords` and `color` are extensively used by basic movement, collision and drawing methods. The `bottom_left` and `top_right` was used in the now deprecated `rotate` method inside Shapes but not anywhere else. First I tought a kind of bounding box should be used for wall and floor collision detection but eventually checking every gox of a trtromino is just as easy and can be used in any other collision check also. One algo rule them all.
+{: .text-justify}
 {% highlight python %}
 class Shapes:
     def __init__(self) -> None:
@@ -66,6 +70,7 @@ class Shapes:
 {% endhighlight %}
 
 Collision detection happens in the `Map` class. Not the best place for this but they got some dependency on each other so it stays. A few utility methods like `is_valid` (checks if grid is within map and it's unoccupied) `get_grid_color`, `color_grid` helps create the movement methods. One is `update_player_shape` which get x and y offsets as input and tries to move the shape to the new location. Checks validity and if all is well deletes the player shape on the map, updates the pivot point and draws it in the new place.
+{: .text-justify}
 {% highlight python %}
 def update_player_shape(self, offset_x, offset_y ):
         valid = True
@@ -89,6 +94,7 @@ def update_player_shape(self, offset_x, offset_y ):
 {% endhighlight %}
 
 Shape rotation in Shapes class is based on vectors and rotation matrices. In 2D rotating one point can be done with a 2x2 matrix. This uses a sin function but because we always want to turn a shape by 90 degree plus or minus the calculations are much much simpler. Sinus 90 equals to -1 and sinus 90 to 1. So this means that the shapes coordinates should be multiplied by -1 or +1 and the actual rotations are became this:
+{: .text-justify}
 {% highlight python %}
 if clockwise:                    
     new_shape_coords.append( (coord[1],-1*coord[0]) )
@@ -98,8 +104,9 @@ else:
 Neat.
 
 By the way this shape rotate algorithm is very similar to the `update_player_shape` method in fact these two should be merged along with some clever attributes to distinguish if we want to rotate or just to move. Or separate the calculations to two new methods and check and re-drawing to an other. Or maybe a context manager setup where the calculations are inside and the checks and erase/drawing are outside. Worth a try sometime.
-
-Generating a new shape happens in `generate_new_shape`, wow. Python's random got a pretty good choice method for this which returns a random element from a list. Besides a random shape this method checks if the new shape's coordinate is unoccupied and if not first it translates 2 grid left, checks, if needed tries 2 grids right. If neither of them available it sets the full variable to True. Which means the game over. 
+{: .text-justify}
+Generating a new shape happens in `generate_new_shape`, wow. Python's random got a pretty good choice method for this which returns a random element from a list. Besides a random shape this method checks if the new shape's coordinate is unoccupied and if not first it translates 2 grid left, checks, if needed tries 2 grids right. If neither of them available it sets the full variable to True. Which means the game over.
+{: .text-justify}
 {% highlight python %}
 rand_shape = random.choice(list(self.shapes.tetrominoes.keys()))
 player_shape = self.shapes.tetrominoes[rand_shape]
